# bad-compiler

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
ASTConsumers/: ASTDumper.h  ASTTypeCheck.h  CalculateConstant.h  FillReference.h  FillType.h  JustForTest.h
driver/: CompileDriver.cpp  YaccDriver.cpp
drivers/: CompileDriver.cpp  YaccDriver.cpp
etc/: action.txt  goto.txt  source.txt  tokens4.txt  yacc_c99.y
implement/AST/: ASTBuilder.cpp
implement/CodeGen/: IRGenerator.cpp
implement/Lexer/: Lexer.cpp
implement/Parser/: CST.cpp  CSTBuilder.cpp
implement/Yacc/: Constructor.cpp
include/AST/: ASTBuilder.h  AbstractASTNode.h  Decl.h  DeclNodes.h  Expr.h  ListenerTypes.inc  RecursiveASTVisitor.h  Stmt.h  StmtNodes.h  Type.h
include/ASTConsumers/: ASTDumper.h  ASTTypeCheck.h  AddVarImplicit.h  CalculateConstant.h  FillReference.h  FillType.h  JustForTest.h
include/DebugInfo/: SourceLocation.h
include/IRGenerator/: IRGenerator.h
include/Lexer/: Lexer.h  lexer.cpp
include/Parser/: CST.h
include/Yacc/: Constructor.h
input/: source.txt  source.txt.tokens.txt
output/: conflict.txt  item_set.txt  out.s  zqtest.txt
